update java gc docs